added block animation, not finished all animation

--- a/src/index.html
+++ b/src/index.html
@@ -14,50 +14,50 @@
       <div class="page__filter-blur">
 
         <div
-          class="clock page--clock-position--relative page--clock-size"
+          class="clock page__clock-position--relative page__clock-size"
         >
 
-          <div class="arrow-container clock--arrow-container-position--absolute clock--arrow-container-size--big arrow-container--anim-big-arrow--rotate">
+          <div class="arrow-container clock__arrow-container-position--absolute clock__arrow-container-size--big arrow-container--anim-big-arrow--rotate">
 
             <div class="arrow-container__arrow-rotated arrow-container__arrow-rotated--big-arrow"></div>
           </div>
 
-          <div class="arrow-container clock--arrow-container-position--absolute clock--arrow-container-size--small arrow-container--anim-small-arrow--rotate">
+          <div class="arrow-container clock__arrow-container-position--absolute clock__arrow-container-size--small arrow-container--anim-small-arrow--rotate">
 
             <div class="arrow-container__arrow-rotated arrow-container__arrow-rotated--small-arrow"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container-first">
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size clock__padding-for-block-container-first">
+            <div class="block-container__block anim--block"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container block-container--row-number--2">
-            <div class="block-container__block"></div>
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--2">
+            <div class="block-container__block anim--block"></div>
+            <div class="block-container__block anim--block"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container block-container--row-number--3">
-            <div class="block-container__block"></div>
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--3">
+            <div class="block-container__block anim--block"></div>
+            <div class="block-container__block anim--block"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container block-container--row-number--4">
-            <div class="block-container__block"></div>
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--4">
+            <div class="block-container__block anim--block"></div>
+            <div class="block-container__block anim--block"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container block-container--row-number--5">
-            <div class="block-container__block"></div>
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--5">
+            <div class="block-container__block anim--block"></div>
+            <div class="block-container__block anim--block"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container block-container--row-number--6">
-            <div class="block-container__block"></div>
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--6">
+            <div class="block-container__block anim--block"></div>
+            <div class="block-container__block anim--block"></div>
           </div>
 
-          <div class="block-container clock--block-container-position--relative clock--block-container-size clock--padding-for-block-container-last">
-            <div class="block-container__block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container-size clock__padding-for-block-container-last">
+            <div class="block-container__block anim--block"></div>
           </div>
         </div>
       </div>
