--- a/src/index.html
+++ b/src/index.html
@@ -27,37 +27,37 @@
             <div class="arrow-container__arrow-rotated arrow-container__arrow-rotated--small-arrow"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size clock__padding-for-block-container-first">
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size clock__padding-for-block-container-first">
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--2">
-            <div class="block-container__block anim--block"></div>
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size block-container--row-number--2">
+            <div class="block-container__block block-container__block--anim--shake"></div>
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--3">
-            <div class="block-container__block anim--block"></div>
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size block-container--row-number--3">
+            <div class="block-container__block block-container__block--anim--shake"></div>
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--4">
-            <div class="block-container__block anim--block"></div>
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size block-container--row-number--4">
+            <div class="block-container__block block-container__block--anim--shake"></div>
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--5">
-            <div class="block-container__block anim--block"></div>
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size block-container--row-number--5">
+            <div class="block-container__block block-container__block--anim--shake"></div>
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size block-container--row-number--6">
-            <div class="block-container__block anim--block"></div>
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size block-container--row-number--6">
+            <div class="block-container__block block-container__block--anim--shake"></div>
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
 
-          <div class="block-container clock__block-container-position--relative clock__block-container-size clock__padding-for-block-container-last">
-            <div class="block-container__block anim--block"></div>
+          <div class="block-container clock__block-container-position--relative clock__block-container--size clock__padding-for-block-container-last">
+            <div class="block-container__block block-container__block--anim--shake"></div>
           </div>
         </div>
       </div>
